force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/PAF_Corp_Travel_Bookings__c.object-meta.xml
<CustomObject>
    <label>Travel Bookings</label>
    <nameField>
        <displayFormat>CTB-{00000}</displayFormat>
        <label>PAF Corp Travel Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>