force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Air_Margi__c.field-meta.xml
<CustomField>
    <fullName>Air_Margi__c</fullName>
    <formula>Air_Margin__c  /  Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Air Margi (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>