force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Air_Margin__c.field-meta.xml
<CustomField>
    <fullName>Air_Margin__c</fullName>
    <formula>Sale_Price__c -  Air_Tickets_Nett__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Air Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>