force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Air_Rollup_Margin__c.field-meta.xml
<CustomField>
    <fullName>Air_Rollup_Margin__c</fullName>
    <label>Air Rollup Margin</label>
    <summarizedField>PAF_Corp_Air__c.Margin__c</summarizedField>
    <summaryForeignKey>PAF_Corp_Air__c.AIR__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>