force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Air_rollup_Sell__c.field-meta.xml
<CustomField>
    <fullName>Air_rollup_Sell__c</fullName>
    <label>Air rollup Sell</label>
    <summarizedField>PAF_Corp_Air__c.Sell__c</summarizedField>
    <summaryForeignKey>PAF_Corp_Air__c.AIR__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>