force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Air_Summary__c.field-meta.xml
<CustomField>
    <fullName>Air_Summary__c</fullName>
    <label>Air Summary</label>
    <type>TextArea</type>
</CustomField>