force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Air_Tickets_Nett__c.field-meta.xml
<CustomField>
    <fullName>Air_Tickets_Nett__c</fullName>
    <label>Air Tickets Nett</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>