force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Air_Tickets_NettRollup__c.field-meta.xml
<CustomField>
    <fullName>Air_Tickets_NettRollup__c</fullName>
    <label>Air Tickets NettRollup</label>
    <summarizedField>PAF_Corp_Air__c.Air_Tickets_Nett__c</summarizedField>
    <summaryForeignKey>PAF_Corp_Air__c.AIR__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>