force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Amount_Outstanding__c</fullName>
    <formula>(Sale_Price__c + BOOKING_FEE__c +  Corp_Car_Total_Cost__c +  Hotel_Total_Cost__c +  Transfers_COst__c  +  Misc_Cost__c ) - Total_BPoint_Payment_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>