force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/BOOKING_FEE__c.field-meta.xml
<CustomField>
    <fullName>BOOKING_FEE__c</fullName>
    <label>Booking Fee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>