force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Card_Used__c.field-meta.xml
<CustomField>
    <fullName>Card_Used__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Card Used</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.PAX__c</field>
            <operation>equals</operation>
            <valueField>Credit_Card_Auth__c.Account__r.Parent_Company__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.PAX__c</field>
            <operation>equals</operation>
            <valueField>Credit_Card_Auth__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Credit_Card_Auth__c</referenceTo>
    <relationshipLabel>Travel Bookings</relationshipLabel>
    <relationshipName>Travel_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>