force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Client_Savings__c.field-meta.xml
<CustomField>
    <fullName>Client_Savings__c</fullName>
    <label>Client Savings</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>