force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost Centre</label>
    <length>20</length>
    <type>Text</type>
</CustomField>