force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Dom_Int__c.field-meta.xml
<CustomField>
    <fullName>Dom_Int__c</fullName>
    <label>Dom/Int</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Personal - Domestic</fullName>
            </value>
            <value>
                <fullName>Personal - International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>