force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Hotel_Nett__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Nett__c</fullName>
    <label>Hotel Nett</label>
    <summarizedField>PAF_Corp_Hotel__c.Excite_Nett__c</summarizedField>
    <summaryForeignKey>PAF_Corp_Hotel__c.Hotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>