force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Hotel_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Total_Cost__c</fullName>
    <label>Hotel Total Cost</label>
    <summarizedField>PAF_Corp_Hotel__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>PAF_Corp_Hotel__c.Hotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>