force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/LLF_Price_Offered__c.field-meta.xml
<CustomField>
    <fullName>LLF_Price_Offered__c</fullName>
    <label>LLF Price Offered</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>