force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Lost_Savings__c.field-meta.xml
<CustomField>
    <fullName>Lost_Savings__c</fullName>
    <label>Lost Savings</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>