force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Misc_Nett__c.field-meta.xml
<CustomField>
    <fullName>Misc_Nett__c</fullName>
    <label>Misc Nett</label>
    <summarizedField>PAF_Misc__c.Misc_Nett__c</summarizedField>
    <summaryForeignKey>PAF_Misc__c.Travel_Bookings__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>