force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/PAX__c.field-meta.xml
<CustomField>
    <fullName>PAX__c</fullName>
    <label>PAX</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PAF_Corp_Travel_Bookings1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>