force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Published_Price__c.field-meta.xml
<CustomField>
    <fullName>Published_Price__c</fullName>
    <label>Published Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>