force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Total_BPoint_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_BPoint_Payment_Received__c</fullName>
    <label>Total BPoint Payment Received</label>
    <summarizedField>PAF_BPoint__c.Amount_Original__c</summarizedField>
    <summaryForeignKey>PAF_BPoint__c.Travel_Bookings__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>