force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Total_Margin_Inc_Booking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin_Inc_Booking_Fee__c</fullName>
    <formula>Total_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Margin(Inc Booking Fee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>