force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Total_Net__c.field-meta.xml
<CustomField>
    <fullName>Total_Net__c</fullName>
    <formula>Air_Tickets_NettRollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>