force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Transfers_Nett__c.field-meta.xml
<CustomField>
    <fullName>Transfers_Nett__c</fullName>
    <label>Transfers Nett</label>
    <summarizedField>PAF_Corp_Transfers__c.Ground_Transport_Nett__c</summarizedField>
    <summaryForeignKey>PAF_Corp_Transfers__c.Travel_Bookings__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>