force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/Xero_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Xero_Email_Address__c</fullName>
    <label>Xero - Email Address</label>
    <type>Email</type>
</CustomField>