force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/fields/XERO_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>XERO_Parent_Account__c</fullName>
    <label>XERO - Parent Account</label>
    <length>30</length>
    <type>Text</type>
</CustomField>