force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/recordTypes/Allstar.recordType-meta.xml
<RecordType>
    <fullName>Allstar</fullName>
    <active>true</active>
    <label>Allstar</label>
</RecordType>