force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/recordTypes/PAF.recordType-meta.xml
<RecordType>
    <fullName>PAF</fullName>
    <active>true</active>
    <label>PAF</label>
</RecordType>