force-app/main/default/objects/PAF_Corp_Travel_Bookings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PAX__c</columns>
    <columns>Dom_Int__c</columns>
    <columns>Total_Margin_Inc_Booking_Fee__c</columns>
    <columns>Amount_Outstanding__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>